fix spotlight ui gap

--- a/src/components/Spotlight.module.css
+++ b/src/components/Spotlight.module.css
@@ -8,5 +8,5 @@
 .Links {
     display: flex;
     justify-content: flex-end;
-    gap: 5px;
+    margin-top: 10px;
 }
